--- a/index.html
+++ b/index.html
@@ -138,12 +138,6 @@
                     </h2>
                 </div>
             </div>
-            <!-- <figure class="sm-image">
-                <img src="files/angel-mounds2.jpeg" alt="">
-                <p class="credit">courtesy of IU archives</p>
-                <p class="caption">The Angel Mounds archaeological site in Vanderburgh County, Indiana.</p>
-            </figure> -->
-            <!-- <h2>IU graduate workers begin picketing for union recognition</h2> -->
             <div class="bylines">
                 <div id="bylines">
                     <!-- update bylines in metadata.json -->
@@ -221,7 +215,7 @@
                     were repatriated until 24 years after the law passed, eight years after Wesley left the university.
                 </p>
                 <p>Slow responses to NAGPRA were not unusual, especially right after its passage, when there was little
-                    guidance on best practices for both institutions and Tribal Nations. Fifteen years after the
+                    guidance on best practices for both institutions and Tribal nations. Fifteen years after the
                     legislation passed, only 40.5% of institutions subject to NAGPRA had reported completing at least
                     one repatriation, according to <a href="https://grantsdev.cr.nps.gov/NagpraPublic/Home/Inventory"
                         target="_blank">public data.</a></p>
@@ -323,7 +317,7 @@
                         First Nations Educational & Cultural Center</a>. During those years, he recalled other faculty
                     members
                     often changing the subject away from Indigenous topics as soon as he walked in the room.</p>
-                <p>“If I start[ed] asking questions, that would upset the whole department and the university,” Wesley
+                <p>“If I start(ed) asking questions, that would upset the whole department and the university,” Wesley
                     said.</p>
             </div>
             <!-- AD BLOCK -->
@@ -442,7 +436,7 @@
                 <p>In addition to the anthropology inventory, about 800 human remains and 2,000 funerary objects were
                     cataloged in the Glenn Black Lab’s inventory, which curator Noel Justice completed.</p>
                 <p>Based on the original law, institutions — not Tribes — had final say on whether human remains were
-                    associated, or “culturally affiliated,” with Tribal Nations. Because of this, some institutions
+                    associated, or “culturally affiliated,” with Tribal nations. Because of this, some institutions
                     <a href="https://nativenewsonline.net/currents/tribes-advocates-work-to-fix-a-30-year-old-loophole-in-federal-law"
                         target="_blank">marked remains as “culturally unidentifiable” even if there was evidence
                         otherwise</a>, essentially
@@ -461,7 +455,7 @@
                 </p>
                 <div class="definition-card wide-right">
                     <p class="word">Cultural affiliation <i class="fas fa-info-circle"></i></p>
-                    <p class="definition">Shared identity between a present-day Tribal Nation with a past group. There
+                    <p class="definition">Shared identity between a present-day Tribal nation with a past group. There
                         are many ways to establish cultural affiliation.
                     </p>
                     <p class="source"><strong>SOURCE:</strong> <a
@@ -667,7 +661,7 @@
                         site</a> in
                     Vanderburgh County had to have been more advanced, and more directly related to Europeans, than the
                     Native Tribes that still live in America.</p>
-                <p>“That is false,” Grimm said. “That's a fallacy, that was a racist myth.”</p>
+                <p>“That is false,” Grimm said. “That's a fallacy. That was a racist myth.”</p>
                 <p>As early as 1932, Lilly was discouraged by contemporaries from pursuing Walam Olum research. In one
                     letter quoted in Lilly’s biography, anthropologist <a
                         href="https://lsa.umich.edu/ummaa/about-us/history/biographies/carl-e--guthe.html"
@@ -763,7 +757,7 @@
                     be working there.</p>
                 <p>The methods used to acquire Native American remains for study and the nature of that resulting
                     research has long been offensive to most Native Americans.</p>
-                <p class="show-mobile">Carrie V. Wilson, NAGPRA Director at the Quapaw Nation, said she can’t understand
+                <p class="show-mobile">Carrie V. Wilson, NAGPRA director at the Quapaw Nation, said she can’t understand
                     why past scientists
                     felt the need to excavate human remains and cultural items.</p>
             </div>
@@ -775,7 +769,7 @@
                         <div class="mug">
                             <img src="https://s3.amazonaws.com/snwceomedia/ids/3f39f957-b4ec-4a34-8f39-0129e10b3c05.original.jpeg"
                                 alt="a headshot of a smiling woman with long dark hair and a blue shirt">
-                            <p><strong>Carrie V. Wilson</strong> <br><em>NAGPRA Director, Quapaw Nation <span
+                            <p><strong>Carrie V. Wilson</strong> <br><em>NAGPRA director, Quapaw Nation <span
                                         class="credit">photo courtesy of
                                         Wilson</span></em></p>
                         </div>
@@ -868,7 +862,7 @@
                 <p>“I was convinced we were affiliated, and I worked with Dr. Jayne-Leigh and April Sievert on
                     establishing cultural affiliation to Angel Mounds,” Wilson said. “So, it eventually went forward.”
                 </p>
-                <p>As part of that process, Wilson and representatives from at least 14 other Tribal Nations <a
+                <p>As part of that process, Wilson and representatives from at least 14 other Tribal nations <a
                         href="https://news.iu.edu/live/news/25098-indiana-university-tribes-proceeding-with"
                         target="_blank">met in
                         Bloomington</a> to consult with Jayne-Leigh and Sievert and move forward with the <a
@@ -1179,18 +1173,13 @@
         <p class="copyright"><small>All content &copy; 2023 Indiana Daily Student</small></p>
     </footer>
 
-    <!-- Jquery cdn — used to set data scroll speed (set in ids.js file) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="http://d3js.org/topojson.v1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"></script>
-    <!-- <script src="js/population.js"></script> -->
-    <!-- <script src="js/albersusa.js"></script> -->
     <script src="js/colorLegend.js"></script>
-    <!-- <script src="js/stripPlot.js"></script> -->
     <script type="module" src="js/bubbleMap.js"></script>
     <script type="module" src="js/beeSwarm.js"></script>
-    <!-- <script type="module" src="js/beeSwarm2.js"></script> -->
     <script src="js/ids.js"></script>
     <script src="js/metadata.js"></script>
 </body>
