angel mounds smaller

--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@
                 <p>“It was much delayed. But when the university finally woke up, they really woke up,” Wilk said.</p>
 
             </div>
-            <figure class="xl-image">
+            <figure class="lg-image">
                 <img src="https://s3.amazonaws.com/snwceomedia/ids/0ecb2433-22a1-44a8-ade5-2688f529429c.original.jpeg"
                     alt="a black and white photo of a grassy field with trees">
                 <figcaption>
