light bulb icons

--- a/index.html
+++ b/index.html
@@ -199,7 +199,10 @@
                     through the early 2000s adhered to “old school” teachings which cast Native American people as
                     objects of scientific study rather than people with human rights.</p>
                 <div class="definition-card wide-right">
-                    <p class="word">NAGPRA <i class="fas fa-info-circle"></i></p>
+                    <div>
+                        <i class="far fa-lightbulb"></i>
+                        <p class="word">NAGPRA</p>
+                    </div>
                     <p class="definition">Law passed in 1990 which mandates federal agencies and museums that receive
                         federal funds to repatriate or transfer ownership of human remains, funerary objects, sacred
                         objects and objects of cultural patrimony to lineal descendants, federally recognized tribes
@@ -220,7 +223,10 @@
                     one repatriation, according to <a href="https://grantsdev.cr.nps.gov/NagpraPublic/Home/Inventory"
                         target="_blank">public data.</a></p>
                 <div class="definition-card wide-left">
-                    <p class="word">Repatriation <i class="fas fa-info-circle"></i></p>
+                    <div>
+                        <i class="far fa-lightbulb"></i>
+                        <p class="word">Repatriation</p>
+                    </div>
                     <p class="definition">Return of possession or control of Native American cultural items to lineal
                         descendants, culturally affiliated Indian Tribes and Native Hawaiian organizations. Often
                         involves reburial.
@@ -377,7 +383,10 @@
                     immediately concerned about IU’s potential noncompliance with NAGPRA.</p>
 
                 <div class="definition-card wide-left">
-                    <p class="word">Inventory <i class="fas fa-info-circle"></i></p>
+                    <div>
+                        <i class="far fa-lightbulb"></i>
+                        <p class="word">Inventory</p>
+                    </div>
                     <p class="definition">An item-by-item description of all human remains and associated funerary
                         objects held by a federally funded institution which had to be submitted to the federal
                         government by 1995.
@@ -424,7 +433,10 @@
                 <p>“That's a different skill set,” Pyburn said. “It's not just, ‘Here's another full time job,’ it's
                     ‘Here's another full time job that you don't know how to do.’”</p>
                 <div class="definition-card wide-left">
-                    <p class="word">Associated funerary objects <i class="fas fa-info-circle"></i></p>
+                    <div>
+                        <i class="far fa-lightbulb"></i>
+                        <p class="word">Associated funerary objects</p>
+                    </div>
                     <p class="definition">Objects that, as part of the death rite or ceremony of a culture, are
                         reasonably believed to have been placed with individual human remains either at the time of
                         death or later, and both the human remains and associated funerary objects are presently in the
@@ -454,7 +466,10 @@
                     involvement.
                 </p>
                 <div class="definition-card wide-right">
-                    <p class="word">Cultural affiliation <i class="fas fa-info-circle"></i></p>
+                    <div>
+                        <i class="far fa-lightbulb"></i>
+                        <p class="word">Cultural affiliation</p>
+                    </div>
                     <p class="definition">Shared identity between a present-day Tribal nation with a past group. There
                         are many ways to establish cultural affiliation.
                     </p>
@@ -566,7 +581,10 @@
                     he would visit museums to examine their materials, but often he would receive donated skeletal
                     remains that would remain at IU permanently.</p>
                 <div class="definition-card wide-left">
-                    <p class="word">Phrenology <i class="fas fa-info-circle"></i></p>
+                    <div>
+                        <i class="far fa-lightbulb"></i>
+                        <p class="word">Phrenology</p>
+                    </div>
                     <p class="definition">The study of skull shape and size as the determinant of intelligence and
                         character. Popular through the 20th century, but has since been scientifically disproved and is
                         considered pseudoscience.
@@ -610,7 +628,10 @@
                         href="https://books.google.com/books/about/Unmasking_the_Walum_Olum.html?id=FdMrHQAACAAJ"
                         target="_blank">probably forged.</a></p>
                 <div class="definition-card wide-right">
-                    <p class="word">Walam Olum <i class="fas fa-info-circle"></i></p>
+                    <div>
+                        <i class="far fa-lightbulb"></i>
+                        <p class="word">Walam Olum</p>
+                    </div>
                     <p class="definition">A set of birch-bark scrolls supposedly found by scientist Constantine
                         Rafinesque in 1833, which most historians now agree was a hoax. Rafinesque published a
                         translation of the pictograms that he supposedly found, which detailed a lengthy origin story of
@@ -847,7 +868,10 @@
                     more difficult, as consultations typically require flights and it’s harder to find reburial land.
                 </p>
                 <div class="definition-card wide-left">
-                    <p class="word">Consultation <i class="fas fa-info-circle"></i></p>
+                    <div>
+                        <i class="far fa-lightbulb"></i>
+                        <p class="word">Consultation</p>
+                    </div>
                     <p class="definition">Communication between representatives of institutions and Tribes to discuss
                         how to move forward with repatriation work. Can consist of phone calls, emails, in-person
                         meetings or any other form of communication.
