--- a/index.html
+++ b/index.html
@@ -973,14 +973,15 @@
                         href="https://culturalpropertynews.org/nagpra-major-changes-proposed-for-2023-to-native-american-repatriation-law/"
                         target="_blank">new regulations</a> that aim to speed up the
                     repatriation process, which have been criticized by some Tribal members.</p>
-                <p>Jayne-Leigh, Pyburn and Wilson all expressed concerns about the recent scrutiny of NAGPRA work, which
-                    they said could put unhelpful pressure on both Tribes and institutions to rush the repatriation
-                    process.</p>
+                <p>Wilson, Jayne-Leigh, Pyburn and Sievert all expressed concerns about the recent scrutiny of NAGPRA
+                    work, which they said could put unhelpful pressure on both Tribes and institutions to rush the
+                    repatriation process.
+                </p>
                 <p>Wilson said she fears the <a
                         href="https://culturalpropertynews.org/nagpra-major-changes-proposed-for-2023-to-native-american-repatriation-law/"
                         target="_blank">proposed NAGPRA regulations</a> might add deadlines that could further strain
                     Tribes and museums that already lack proper funding for NAGPRA work.</p>
-                <p>Jayne-Leigh Thomas expressed frustration about recent scrutiny, and said it perpetuates common
+                <p>Jayne-Leigh expressed frustration about recent scrutiny, and said it perpetuates common
                     misconceptions about NAGPRA, like the idea that today’s collection sizes reflect on the quality of
                     NAGPRA work today.</p>
                 <p>“Having large numbers in your dataset doesn't mean you're out of compliance, and it doesn't mean
@@ -1000,18 +1001,21 @@
                             Inventories</a>
                     </p>
                 </figure>
-                <p>In a statement to the IDS, the ProPublica reporting team behind the repatriation investigation wrote,
-                    “Before publication, ProPublica sought comment from each of the universities named in our reporting,
-                    including Indiana University. Director [Jayne-Leigh] Thomas did not respond to our requests. Our
+                <p>When asked about these criticisms, the ProPublica reporting team behind the repatriation
+                    investigation wrote,
+                </p>
+                <p>“Before publication, ProPublica sought comment from each of the universities named in our reporting,
+                    including Indiana University. Director (Jayne-Leigh) Thomas did not respond to our requests. Our
                     reporting team welcomes feedback on our coverage or corrections, which can be emailed to
                     repatration@propublica.org. We are aware that the self-reported inventory records are incomplete and
-                    likely underestimates. We write about this in our stories and methodology section.”</p>
+                    likely underestimates. We write about this in our stories and methodology section.”
+                </p>
                 <p>Jayne-Leigh also said it would be more helpful if the senators worked with the National NAGPRA Office
                     directly.</p>
                 <p>“To some extent, that's the whole point of National NAGPRA is to investigate NAGPRA noncompliance,”
                     Jayne-Leigh said. “It would be great if the senators could work with National NAGPRA to either
                     increase penalties or give more grants.”</p>
-                <p>Jayne-Leigh also echoed Wilson’s concerns about rushing NAGPRA work.</p>
+                <p>She also echoed Wilson’s concerns about rushing NAGPRA work.</p>
                 <p>“If a university hurries up just because of pressure from senators, media outlets and other
                     organizations, collections might be left behind, there could be funerary objects not accounted for,”
                     Jayne-Leigh said. “My work with Tribal nations needs to be dictated by their timelines and concerns,
@@ -1029,7 +1033,7 @@
                 <p>Right now, Wilson cannot request funding for her one-person department — she can only request one-off
                     grants for specific projects. She said money to help Tribes create and maintain NAGPRA departments
                     would go a lot further.</p>
-                <p>More sustained funding for national NAGPRA would help expedite often backlogged processes. For
+                <p>More sustained funding for National NAGPRA would help expedite often backlogged processes. For
                     example, disputes between institutions and Tribes must be processed by National NAGPRA before any
                     fines or other legal action can proceed, but the office is typically very backed up. The office
                     <a href="https://www.doi.gov/pressreleases/department-interior-takes-steps-enhance-compliance-native-american-graves-protection"
@@ -1084,7 +1088,7 @@
                     </p>
                     <p><a
                             href="https://s3.amazonaws.com/snwceomedia/ids/034f5895-1419-4a20-b35c-d54a3c4ed1f5.original.png">Social
-                            share image</a> by Cailin O'Malley, Amanda King and Carson TerBush</p>
+                            share image</a> by Amanda King, Cailin O'Malley and Carson TerBush</p>
                 </div>
 
                 <p class="donate">
