--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
                     century.</p>
                 <!-- MAP OF ORIGIN OF REMAINS -->
                 <h4 class="show-desktop" style="margin-top:2.0em;">IU has reported Native American remains originating
-                    from at least 10
+                    from at least 15
                     states</h4>
                 <h5 class="show-desktop" style="margin-bottom: -20px;">Through the 20th century, anthropologists,
                     amateur archaeologists and
@@ -1198,7 +1198,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="http://d3js.org/topojson.v1.min.js"></script>
+    <script src="https://d3js.org/topojson.v1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"></script>
     <script src="js/colorLegend.js"></script>
     <script type="module" src="js/bubbleMap.js"></script>
