fix carrie title

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                     more resources would rush repatriation and make it harder to do it properly.</p>
                 <p>“Trying to expedite this process could turn very easily into kind of a garage sale mentality, of
                     saying, ‘Well, we just have to get them out of our museum, we'll just give them to the first Tribe
-                    that shows interest,’ and that's not good,” said Carrie V. Wilson, NAGPRA coordinator at the Quapaw
+                    that shows interest,’ and that's not good,” said Carrie V. Wilson, NAGPRA director at the Quapaw
                     Nation. “That's not going to help anybody. I don't think that was the intent of NAGPRA.”</p>
                 <p>The story of NAGPRA at IU is one of great complexity. Faced with the problematic legacy of how IU
                     acquired its vast collection of human remains to begin with, IU employees and Tribal members agree
